Empty list placeholder in middle

--- a/unsplash-box/frontend/src/screens/CollectionList/index.module.sass
+++ b/unsplash-box/frontend/src/screens/CollectionList/index.module.sass
@@ -2,6 +2,7 @@
     display: grid
     gap: 2rem
     width: 100%
+    justify-content: start
     height: fit-content
     grid-template-columns: repeat(auto-fit, 500px)
     grid-auto-rows: 400px
